test/fail/basic_syntax/invalid_parameter_type.lily
#[
SyntaxError: Class 'asdf' does not exist.
    from invalid_parameter_type.lily:6:
]#

define f(g: asdf) {
}
